2009-06-16  Frank Warmerdam  <warmerdam@pobox.com>

	* README: Update windows build instructions (#30).

	* nad/epsg: Upgraded to EPSG 7.1. 

2009-05-19  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/testvarious,nad/testdatumfile: split datum file specific
	stuff into testdatumfile, and add kav5 test in testvarious (#40).

2009-05-18  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_sts.c: Remove duplicate division o lp.phi by P->C_p (#40).

2009-05-13  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_imw_p.c: Correct handling of yc in loc_for() (#39).

2009-04-02  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: Changes to ensure grid shift files are processed
	before running check-local, and to use the local grid shift files
	if available, and to avoid testvarious if grid shift files are
	not available.

	* src: Fix various warnings. 

2009-03-11  Frank Warmerdam  <warmerdam@pobox.com>

	* man/man1: fix Snyder reference (#29)

2009-03-10  Howard Butler <hobu.inc@gmail.com>
	* autogen.sh: Use autogen.sh from libLAS for wider
        platform (OSX, Solaris) compatibility
	* config.guess config.log: remove autoconf temporary
	files

2009-03-10  Mateusz Loskot  <mateusz@loskot.net>

	* makefile.vc: Added new files pj_mutex.c, pj_initcache.c.

2009-03-09  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_init.c, pj_mutex.c, pj_initcache.c: Introduced in-memory caching
	of init file search results.

2009-03-08	IGNF <didier.richard@ign.fr>

	* src/PJ_gstmerc.c: Correction of a bug in inv() function :
	the projected origin coordinates where descaled.

	* nad/testIGNF: Add a comment on the mandatory existance of the world grid
	in order to make the test.

	* ChangeLog: this comments

2009-01-26  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*.c: Remove SCCSID and lint stuff from all source files.

2009-01-23  Frank Warmerdam  <warmerdam@pobox.com>

	* src/biveval.c: Avoid use of static variables which interfere with
	re-entrancy (#24)" 
